--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,10 +1,11 @@
 // @include font-face("Muller", "../fonts/MullerRegular", 400, normal);
+
 @font-face {
   font-family: raleway-c;
-  src: url(./../resources/fonts/raleway-regular.woff2);
+  src: url(./../fonts/raleway-regular.woff2);
 }
 
 @font-face {
   font-family: outfit-c;
-  src: url(./../resources/fonts/outfit-regular.woff2);
+  src: url(./../fonts/outfit-regular.woff2);
 }
