--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,8 @@
-<header class="header">
-  <div class="container"></div>
+<header class="hero-section">
+  <img data-speed=".6" class="hero" src="img/hero.png" alt="Alt">
+  <div class="container">
+    <div data-speed=".75" class="main-header">
+      <h1 class="main-title">creative scroll</h1>
+    </div>
+  </div>
 </header>
