--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="hero-section">
-  <img data-speed=".6" class="hero" src="img/hero.png" alt="Alt">
+  <img class="hero" src="img/hero.png" alt="Alt">
   <div class="container">
-    <div data-speed=".75" class="main-header">
+    <div class="main-header">
       <h1 class="main-title">creative scroll</h1>
     </div>
   </div>
