add scroll smoother

--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -7,8 +7,8 @@
   <title>Creative Scroll Site</title>
   <link rel="stylesheet" href="css/vendor.css">
   <link rel="stylesheet" href="css/main.css">
-  <script defer src="resources/libs/gsap.min.js"></script>
-  <script defer src="resources/libs/ScrollSmoother.min.js"></script>
-  <script defer src="resources/libs/ScrollTrigger.min.js"></script>
+  <script defer src="libs/gsap.min.js"></script>
+  <script defer src="libs/ScrollSmoother.min.js"></script>
+  <script defer src="libs/ScrollTrigger.min.js"></script>
   <script defer src="js/main.js"></script>
 </head>
