--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -2,7 +2,7 @@
   <div class="container">
     <main class="gallery">
 
-      <div class="gallery__left">
+      <div data-speed=".9" class="gallery__left">
 
         <img class="gallery__item" src="img/work/1.jpg" alt="Alt">
         <img class="gallery__item" src="img/work/2.jpg" alt="Alt">
@@ -17,7 +17,7 @@
 
       </div>
 
-      <div class="gallery__right">
+      <div data-speed="1.1" class="gallery__right">
 
         <div class="text-block gallery__item">
           <h2 class="text-block__h">Creative floating scroll with amazing parallax effect</h2>
